Коммит сырой программы, для восстановления